# PaperSearch

./: README.md  config.ini  main.py  pyproject.toml  test_papersearch.py
src/papersearch/: __init__.py  arxiv.py  biorxiv.py  cli.py  pdf_downloader.py  pubmed.py  utils.py
src/papersearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/papersearch/gui/: gui.py
