[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "papersearch"
version = "1.0.0"
description = "A comprehensive literature search tool for querying PubMed and other academic databases"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
papersearch = "papersearch.cli:main"
papersearch-gui = "papersearch.gui.main:main"

[tool.setuptools.packages.find]
where = ["src"]
